# AIChainQASysterm

./: .env.example  .gitignore  README.md  ai算力产业链知识图谱问答系统技术文档.md  app.py  docker-compose.yml  implenment.md  main.py  pyproject.toml
data/curated/: entities.csv  relations.csv
data/metadata/: companies.csv  companies_extended.csv  industry_sources.csv  reports_manifest.csv  research_keywords.csv
data/verified/: entities.csv  relations.csv
log/: log.md
scripts/: benchmark_qa_speed.py  build_curated_graph.py  build_rag_index.py  build_verified_graph.py  evaluate_qa.py  extract_knowledge.py  load_neo4j.py  parse_pdfs.py  prepare_stage1_data.py
src/: __init__.py  api.py  conversation_store.py  curated_graph.py  cypher_generator.py  cypher_guard.py  data_config.py  domain_lexicon.py  extraction_schema.py  frontend_data.py  graph_builder.py  kg_loader.py  llm_client.py  llm_extractor.py  neo4j_client.py  pdf_parser.py  professional_qa.py  qa_engine.py  question_planner.py  rag_index.py  text_cleaner.py  web_search.py
tests/: test_api.py  test_conversation_store.py  test_frontend_data.py  test_llm_client.py  test_prepare_stage1_data.py  test_professional_qa.py  test_rag_qa.py  test_stage2_stage3_pipeline.py  test_web_search.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  api.ts  styles.css  types.ts
