[project]
name = "aiqasys"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12",
    "cryptography>=42",
    "fastapi>=0.115,<0.116",
    "jieba>=0.42.1",
    "neo4j>=5.20",
    "pydantic>=2.0,<3.0",
    "PyMuPDF>=1.24",
    "pypdf>=5.0",
    "rank-bm25>=0.2.2",
    "requests>=2.31",
    "streamlit>=1.40",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27,<0.28",
    "pytest>=8.0",
]

[dependency-groups]
dev = [
    "httpx>=0.27,<0.28",
    "pytest>=8.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
